<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context=".controller.main.profile.PatientProfile"
    android:id="@+id/PatientProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/upper_bar_sub"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left_arrow"
            android:rotationY="@integer/angle_rtl_180"/>


        <ImageView
            android:id="@+id/edit_profile_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit_profile" />

        <TextView
            android:id="@+id/EditImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            android:src="@drawable/defaultpic"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toTopOf="@+id/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="Name"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/emailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat"
        android:text="email@email.com"
        android:textColor="#515C6F"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/new_white_card"
        android:elevation="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head">

        <LinearLayout
            android:id="@+id/alert"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/delete_button"
            android:elevation="10dp"
            android:focusable="auto"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/verify"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                app:srcCompat="@drawable/ic_error" />

            <LinearLayout
                android:id="@+id/resendL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alarmMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/VervEmail"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="10dp"
                    android:text="@string/resend_verification_email"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/white_background"
            android:clickable="true"
            android:focusable="auto"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/social_demo_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                app:srcCompat="@drawable/ic_report_icon" />

            <TextView
                android:id="@+id/socio_demo_title"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/my_information"
                android:textColor="#515C6F"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/go_to1"
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_go_to"
                android:rotationY="@integer/angle_rtl_180"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_background"
            android:clickable="true"
            android:focusable="auto"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/doctor_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                app:srcCompat="@drawable/ic_doctor_icon" />

            <TextView
                android:id="@+id/doctor_text"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/MyDoc"
                android:textColor="#515C6F"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/doctor_text2"
                android:layout_width="148dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:text="@string/doctor"
                android:textAlignment="textEnd"
                android:textColor="#66515C6F"
                android:textSize="15sp"
                tools:ignore="RtlCompat" />

            <ImageView
                android:id="@+id/go_to2"
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_go_to"
                android:rotationY="@integer/angle_rtl_180"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_background"
            android:clickable="true"
            android:focusable="auto"
            android:orientation="horizontal"
            android:id="@+id/googleCalender">

            <ImageView
                android:id="@+id/calendar_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                app:srcCompat="@drawable/google_calendar" />

            <TextView
                android:id="@+id/calendar"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/google_calendar"
                android:textColor="#515C6F"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/connection_status"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:text="@string/disabled"
                android:textAlignment="textEnd"
                android:textColor="#66515C6F"
                android:textSize="15sp"
                tools:ignore="RtlCompat" />

            <ImageView
                android:id="@+id/go_to3"
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_go_to"
                android:rotationY="@integer/angle_rtl_180"/>

        </LinearLayout>


        <Button
            android:id="@+id/log_out_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/logout"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
